# rust-code-challenges

./: Cargo.toml  README.md
binary_heap_example/: Cargo.toml
binary_heap_example/src/: lib.rs  task_manager.rs
candle-demo/: Cargo.toml
cli-fruit-salad/: Cargo.toml
cli-fruit-salad/src/: lib.rs  main.rs
cli-system-monitor/: Cargo.toml
cli-system-monitor/src/: main.rs
create-rust-app/: Cargo.toml  Makefile  README.md  main.rs  mindmap.md
create-rust-app/src/: cli.rs  error.rs  lib.rs  main.rs  mod.rs  state.rs  utils.rs  writer.rs
csv-reader/: Cargo.toml
csv-reader/src/: main.rs
custom-iterator/: Cargo.toml
custom-iterator/src/: lib.rs
frequency-counter/: Cargo.toml
frequency-counter/src/: main.rs
google-pagerank/: Cargo.toml
google-pagerank/src/: lib.rs
hash_set/src/: lib.rs
iris-data-analysis/: Cargo.toml
iris-data-analysis/src/: main.rs
life-expectancy-cli/: Cargo.toml
life-expectancy-cli/src/: cli.rs  core.rs  main.rs
lru-cache/src/: lib.rs
src/: lib.rs  main.rs
src/deadline_passed/: mod.rs
src/dedup/: mod.rs
src/flowers_bloom/: mod.rs
src/hand_cards_value/: mod.rs
src/insensitive_sort/: mod.rs
src/integer_break/: mod.rs
src/median/: mod.rs
src/morse_code/: mod.rs
src/print/: mod.rs
src/temprature/: mod.rs
src/unique/: mod.rs
stateful-web-request/: Cargo.toml  mindmap.md
stateful-web-request/src/: init.rs  main.rs  state.rs
stateful-web-request/v1/: Cargo.toml
stateful-web-request/v2/: Cargo.toml
stateful-web-request/v3/: Cargo.toml  Makefile
stateful-web-request/v4/: Cargo.toml  Makefile
(+26 files in other folders)
