workspace = { members = [ "binary_heap_example","cli-fruit-salad", "frequency-counter", "google-pagerank", "hash_set", "lru-cache"] }
[package]
name = "rust-code-challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
