workspace = { members = [
    "binary_heap_example",
    "candle-demo",
    "cli-fruit-salad",
    "cli-system-monitor",
    "csv-reader",
    "custom-iterator",
    "frequency-counter",
    "google-pagerank",
    "hash_set",
    "iris-data-analysis",
    "life-expectancy-cli",
    "lru-cache",
    "stateful-web-request",
    "stateful-web-request/v1",
    "stateful-web-request/v2",
    "stateful-web-request/v3",
    "stateful-web-request/v4",
] }
[package]
name = "rust-code-challenges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
